<?xml version="1.0"?>
<package format="2">
  <name>hand_visualizer</name>
  <version>0.0.0</version>
  <description>The hand_visualizer package</description>

  <maintainer email="liuxy@io-al.tech">io008</maintainer>

  <license>TODO</license>
  
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>io_msgs</build_depend>
  <build_export_depend>io_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>io_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>

  </export>
</package>
